# LangTrans

./: main.py  pyproject.toml  requirements.txt
langtrans/: app.py  map_reduce.py  大叔合并5k.txt
langtrans/utils/: logging_config.py
langtrans/v1/: configer.py  prompt_templates.py  v1_router.py
langtrans/v1/config/: __init__.py  custom_key.toml
langtrans/v1/llms/: base.py  openai_llm.py
static/: index.html  script.js  styles.css
templates/: upload.html
tests/: dqueue.py  func_base.py  logging_cofig.py  test.ipynb
utils/: document_processor.py  llm_handler.py
