[tool.poetry]
name = "langtrans"
version = "0.1.0"
description = ""
authors = ["Stubblef <tsing967@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.65.3"
loguru = "^0.7.3"
fastapi = "^0.115.11"
pypdf2 = "^3.0.1"
docx = "^0.2.4"
langchain = "^0.3.20"
uvicorn = "^0.34.0"
langchain-community = "^0.3.19"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
